--- a/unsplash.css
+++ b/unsplash.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     background-color: rgb(255,255,255);
+    /* box-sizing: border-box; */
+    /* overflow-x: hidden; */
 }
 
  .gold{
@@ -10,7 +12,7 @@
     padding: 20px;
     border-bottom: 1px solid gray;
     position: fixed;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
 
 }
@@ -84,23 +86,54 @@
     border-color: black;
 }
 
-.cway{
+/* .cway{
     padding-top: 110px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    /* grid-template-rows: minmax(300px, auto); */
+    grid-template-rows: minmax(300px, auto);
     gap: 4px;
+    width: 95%;
+    margin: auto;
+    columns: 3;
+    column-gap: 10px;
     
 }
 
 .cway div{
     padding: 30px;
     background-color: whitesmoke;
-    /* width: 90%; */
+    width: 90%;
 }
 
 .cway img{
     width: 90%;
+    margin: 30px;
 }
 
+.five img{
+    margin-top: -300;
+} */
 
+
+
+
+
+
+.cway{
+    width: 96%;
+    margin: auto;
+    /* columns: 3; */
+    column-count: 3;
+    column-gap: 10px;
+    padding-top: 3cm;
+
+}
+
+.cway div{
+    /* width: 100%; */
+    margin-bottom: 12px;
+}
+
+.cway img{
+    width: 100%;
+}
